@@ -4378,20 +4378,6 @@ argument_list|)
 expr_stmt|;
 break|break;
 case|case
-name|LIST
-case|:
-name|listCollections
-argument_list|(
-name|zkStateReader
-operator|.
-name|getClusterState
-argument_list|()
-argument_list|,
-name|results
-argument_list|)
-expr_stmt|;
-break|break;
-case|case
 name|CLUSTERSTATUS
 case|:
 name|getClusterStatus
@@ -7287,73 +7273,6 @@ return|return
 name|collection
 return|;
 block|}
-block|}
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unchecked"
-argument_list|)
-DECL|method|listCollections
-specifier|private
-name|void
-name|listCollections
-parameter_list|(
-name|ClusterState
-name|clusterState
-parameter_list|,
-name|NamedList
-name|results
-parameter_list|)
-block|{
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|collections
-init|=
-name|clusterState
-operator|.
-name|getCollections
-argument_list|()
-decl_stmt|;
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|collectionList
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|String
-name|collection
-range|:
-name|collections
-control|)
-block|{
-name|collectionList
-operator|.
-name|add
-argument_list|(
-name|collection
-argument_list|)
-expr_stmt|;
-block|}
-name|results
-operator|.
-name|add
-argument_list|(
-literal|"collections"
-argument_list|,
-name|collectionList
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|SuppressWarnings
